[package]
name = "sqlx-to-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = ["json", "time", "runtime-tokio-rustls"] }
serde_json = "1"
time = "0.3"

[features]
default = ["mysql", "postgres"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]